# ai

./: .env.example  Makefile  README.md  package.json  pnpm-lock.yaml  pyproject.toml
agentic/: .env.example  .gitignore  README.md  ROADMAP.md  ROADMAP.mdback  docker-compose.yml  mcp_server.py  pyproject.toml
agentic/src/: __init__.py  main.py  settings.py
agentic/src/agent/: factory.py  graph.py  guardrails.py  memory.py  nodes.py  reflection.py  registry.py  schemas.py  spec.py  state.py  tools.py
agentic/src/agent/tools/: __init__.py  builtin.py  rag.py  subagent.py
agentic/src/api/: routes.py
agentic/src/app/: logging.py  main.py
agentic/src/app/agent/: factory.py  graph.py  nodes.py  registry.py
agentic/src/app/agent/tools/: __init__.py  base.py  builtin.py  rag.py  subagent.py
agentic/src/app/api/: routes.py
agentic/src/middleware/: ratelimit.py
agentic/tests/: test_agent.py  test_api.py  test_guardrails.py  test_hitl.py  test_lifespan.py  test_logging.py  test_memory.py  test_orchestrator.py  test_rag.py  test_ratelimit.py  test_reflection.py  test_registry.py  test_spec.py  test_subagent.py  test_tools.py
apps/admin/: eslint.config.mts  package.json  tsconfig.test.json
apps/admin/src/features/settings/: sessions-page.tsx
apps/admin/src/lib/: api-client.ts  api.ts
apps/api/: .env.example  ARCHITECTURE.md  eslint.config.mts  package.json
apps/api/src/: app.module.ts
apps/api/src/__tests__/: agent.e2e-spec.ts  article.e2e-spec.ts  chat.e2e-spec.ts  order.e2e-spec.ts
apps/api/src/__tests__/helpers/: create-authenticated-request.ts  create-request.ts
apps/api/src/app/config/: env.schema.ts
apps/api/src/modules/agent/: agent.module.ts
docker/: docker-compose.yml
(+28 files in other folders)
